--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "postcss.config.js", "tailwind.config.js"]
 }
